# wgslsmith

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile.validation-server  Makefile.toml  README.adoc  README.md  build.py  cargo  justfile  start-validation-server.sh  x
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependency_versions.yaml
.github/workflows/: ci.yml  docs.yml  harness.yml  wgslsmith.yml
ast/: Cargo.toml
ast/src/: expr.rs  func.rs  globals.rs  lib.rs  prelude.wgsl  stmt.rs  structs.rs  types.rs
cmake/: README.md  WinMsvc.cmake
common/: Cargo.toml
common/src/: lib.rs
crates/ast/: Cargo.toml
crates/ast/src/: builtins.rs  expr.rs  func.rs  globals.rs  lib.rs  stmt.rs  structs.rs  types.rs  writer.rs
crates/buffer-check/: Cargo.toml
crates/buffer-check/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/concretizer/: Cargo.toml
crates/concretizer/src/: builtin.rs  concretizer.rs  helper.rs  lib.rs  value.rs
crates/data_race_generator/: Cargo.toml
crates/data_race_generator/src/: data_race_gen.rs  lib.rs  main.rs
crates/dawn/: Cargo.toml  build.rs
crates/dawn/src/: bindings.rs  lib.cpp  lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs  main.rs
crates/flow/: Cargo.toml
crates/flow/src/: cli.rs  lib.rs  main.rs
crates/fuzzer/: Cargo.toml
crates/fuzzer/src/: main.rs
crates/generator/: Cargo.toml
crates/generator/src/: gen.rs  lib.rs  main.rs
crates/generator/src/generator/: builtins.rs  stmt.rs  structs.rs
crates/harness/: Cargo.toml  test.json  test.wgsl
crates/harness-client/: Cargo.toml
crates/harness-client/src/: main.rs
crates/harness-frontend/: Cargo.toml
crates/harness-frontend/src/: lib.rs  printer.rs  utils.rs
crates/harness-server/: Cargo.toml
crates/harness-server-types/: Cargo.toml
crates/harness-server-types/src/: lib.rs
crates/harness-types/: Cargo.toml
crates/harness-types/src/: lib.rs
crates/harness/src/: cli.rs  dawn.rs  lib.rs  main.rs  reflection.rs  server.rs  wgpu.rs
crates/parser/: Cargo.toml
crates/parser/src/: builtins.rs  grammar.pest  lib.rs
crates/parser/src/snapshots/: parser__tests__1.snap  parser__tests__2.snap  parser__tests__3.snap  parser__tests__4.snap  parser__tests__5.snap  parser__tests__calls.snap  parser__tests__floats.snap  parser__tests__loops.snap  parser__tests__ptrs.snap  parser__tests__structs.snap
crates/parser/src/tests/: 1.wgsl  2.wgsl  3.wgsl  4.wgsl  5.wgsl  calls.wgsl  floats.wgsl  loops.ast  loops.wgsl  ptrs.wgsl  structs.ast  structs.wgsl  test_1.ast  test_1.wgsl  test_2.ast  test_3.ast  test_3.wgsl  test_4.ast  test_5.ast
crates/preprocessor/: Cargo.toml
crates/preprocessor/src/: lib.rs  main.rs
crates/reconditioner/: Cargo.toml
crates/reconditioner/src/: analysis.rs  cli.rs  eval_builtin.rs  eval_value.rs  evaluator.rs  lib.rs  main.rs  prelude.wgsl
crates/reconditioner/src/safe_wrappers/: clamp.rs  divide.rs  divide_i32.wgsl  divide_u32.wgsl  dot.rs  float.rs  float_divide.rs  index.rs  minus.rs  minus_i32.wgsl  minus_u32.wgsl  mod.rs  mod_i32.wgsl  mod_u32.wgsl  modulo.rs  plus.rs  plus_i32.wgsl  plus_u32.wgsl  times.rs  times_i32.wgsl  times_u32.wgsl
crates/reduce/: Cargo.toml
crates/reduce/src/: main.rs
crates/reducer/: Cargo.toml
crates/reducer/src/: main.rs
crates/reflection/: Cargo.toml
crates/reflection-types/: Cargo.toml
crates/reflection-types/src/: lib.rs
crates/reflection/src/: lib.rs
crates/thread/: Cargo.toml
crates/thread/src/: cli.rs  lib.rs  main.rs
crates/tint/: Cargo.toml  build.rs
crates/tint/src/: lib.cpp  lib.h  lib.rs
crates/ub/: Cargo.toml
crates/ub/src/: cli.rs  lib.rs  main.rs  ub.rs
crates/validation-server/: Cargo.toml
crates/validation-server-types/: Cargo.toml
crates/validation-server/src/: imp.rs
crates/wgslsmith/: Cargo.toml
crates/wgslsmith/src/: compiler.rs  config.rs  executor.rs  fmt.rs  fuzzer.rs  fxc.rs  gen.rs  generator.rs  harness_runner.rs  lib.rs  main.rs  reconditioner.rs  reducer.rs  remote.rs  test-picire.sh  test.ps1  test.rs  test.sh  validator.rs
crates/wgslsmith/src/generator/: builtins.rs  cx.rs  expr.rs  fns.rs  scope.rs  stmt.rs  structs.rs  utils.rs
dawn/: CMakeLists.txt  Cargo.toml  build.rs
dawn/cmake/: README.md
dawn/src/: lib.cpp  lib.h  lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  building.md
docs/src/building/: cross-compiling.md  index.md
docs/src/generator/: index.md
docs/src/harness/: building.md  configurations.md  exit-codes.md  index.md  remote-execution.md  swiftshader.md  test-case-reduction.md  usage.md
docs/src/reconditioner/: index.md
docs/src/reducer/: index.md
docs/src/validator/: index.md
harness/: .gitignore  Cargo.toml  Dockerfile.fxc  build-fxc-server.sh  start-fxc-server.sh
harness/crates/dawn/: Cargo.toml  build.rs
harness/crates/fxc-server/: Cargo.toml
harness/crates/fxc-server-types/: Cargo.toml
harness/crates/fxc-server/src/: imp.rs  main.rs
harness/crates/harness/: Cargo.toml  test.json
harness/crates/harness/src/: dawn.rs  lib.rs  main.rs  reflection.rs  server.rs  utils.rs  wgpu.rs
harness/crates/server/: Cargo.toml
harness/crates/validation-server/: Cargo.toml
harness/crates/validation-server-types/: Cargo.toml
harness/src/: dawn.rs  ext.rs  main.rs  wgpu.rs
parser/: Cargo.toml
parser/src/: grammar.pest  lib.rs
parser/src/tests/: 1.wgsl  2.wgsl
reconditioner/: Cargo.toml
reconditioner/src/: lib.rs  main.rs
scripts/: bootstrap  fuzzer  fuzzer.py  reduce  reduce-miscompilation.sh  reduce.py  reducer-test.sh  template.env
src/: ast.rs  generator.rs  lib.rs  main.rs  prelude.wgsl  types.rs
test_cases/: 1.wgsl  2.wgsl  3.wgsl  4.wgsl  5.wgsl
tools/: .gitignore
wgslsmith/: Cargo.toml
wgslsmith/src/: ast.rs  generator.rs  lib.rs  macros.rs  main.rs  prelude.wgsl  types.rs
wgslsmith/src/generator/: cx.rs  expr.rs  fns.rs  scope.rs  stmt.rs  structs.rs  utils.rs
wgslsmith_harness/: Cargo.toml
wgslsmith_harness/src/: dawn.rs  main.rs  wgpu.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
(+7 files in other folders)
