[package]
name = "wgslsmith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
hashers = "1.0"
indenter = "0.3"
log = "0.4"
once_cell = "1.9"
paste = "1.0"
rand = "0.8"
rpds = "0.11"

ast = { path = "../ast" }

[dependencies.clap]
version = "3.0"
features = ["derive"]
