[package]
name = "wgslsmith_harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
color-eyre = "0.5"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
wgpu = "0.12"

dawn = { path = "../dawn" }
