[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0", features = ["full"] }
indenter = "0.3"

[dependencies.strum]
version = "0.24.0"
features = ["derive"]
