[package]
name = "data_race_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
eyre = "0.6.8"
hashers = "1.0"
indenter = "0.3"
once_cell = "1.9"
rand = "0.8"
rand_distr = "0.4.3"
rpds = "0.11"
serde_json = "1.0"
tracing = "0.1"

ast = { path = "../ast" }
common = { path = "../common" }

[dependencies.clap]
version = "3.0"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
