[package]
name = "dawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }
futures = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cc = { workspace = true }
