[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
regex = "1.5.5"
wait-timeout = "0.2.0"

[dependencies.clap]
version = "3.0.0"
features = ["derive"]

[dependencies.time]
version = "0.3.9"
features = ["formatting", "local-offset"]
