[package]
name = "harness-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
eyre = "0.6.8"
termcolor = "1.1.3"

types = { path = "../harness-types", package = "harness-types" }
reflection-types = { path = "../reflection-types" }
