[package]
name = "harness-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
color-eyre = "0.6.1"
eyre = "0.6.8"
serde_json = "1.0"
termcolor = "1.1.3"

ast = { path = "../ast" }
buffer-check = { path = "../buffer-check" }
common = { path = "../common" }
parser = { path = "../parser" }
reflection = { path = "../reflection" }
types = { path = "../harness-types", package = "harness-types" }

[dependencies.clap]
version = "3.1.17"
features = ["derive"]
