[package]
name = "harness-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }
termcolor = { workspace = true }

ast = { workspace = true }
buffer-check = { workspace = true }
common = { workspace = true }
parser = { workspace = true }
reflection = { workspace = true }
types = { path = "../harness-types", package = "harness-types" }
