[package]
name = "harness-server-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"

reflection-types = { path = "../reflection-types" }
types = { path = "../harness-types", package = "harness-types" }
