[package]
name = "harness-server-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }

reflection-types = { workspace = true }
types = { path = "../harness-types", package = "harness-types" }
