[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
color-eyre = "0.5"
env_logger = "0.9"
futures = "0.3"
log = "0.4.16"
serde_json = "1.0"
wgpu = "0.12"

preprocessor = { path = "../preprocessor" }
common = { path = "../common" }
dawn = { path = "../dawn" }

[dependencies.clap]
version = "3.1.8"
features = ["derive"]
