[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wgslsmith-harness"
path = "src/main.rs"

[dependencies]
bincode = "2.0.0-rc.1"
byteorder = "1.4.3"
color-eyre = "0.6.1"
env_logger = "0.9"
eyre = "0.6.8"
futures = "0.3"
log = "0.4.16"
process_control = "3.5.1"
serde_json = "1.0"
threadpool = "1.8.1"
wgpu = "0.14"

ast = { path = "../ast" }
buffer-check = { path = "../buffer-check" }
common = { path = "../common" }
dawn = { path = "../dawn" }
frontend = { path = "../harness-frontend", package = "harness-frontend" }
parser = { path = "../parser" }
reflection = { path = "../reflection" }
preprocessor = { path = "../preprocessor" }
server-types = { path = "../harness-server-types", package = "harness-server-types" }
types = { path = "../harness-types", package = "harness-types" }

[dependencies.clap]
version = "3.1.17"
features = ["derive"]
