[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wgslsmith-harness"
path = "src/main.rs"

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
process_control = { workspace = true }
serde_json = { workspace = true }
threadpool = { workspace = true }
wgpu = { workspace = true }

ast = { workspace = true }
buffer-check = { workspace = true }
common = { workspace = true }
dawn = { workspace = true }
frontend = { path = "../harness-frontend", package = "harness-frontend" }
parser = { workspace = true }
preprocessor = { workspace = true }
reflection = { workspace = true }
server-types = { path = "../harness-server-types", package = "harness-server-types" }
types = { path = "../harness-types", package = "harness-types" }
