[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indenter = { workspace = true }
peeking_take_while = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
rpds = { workspace = true }
strum = { workspace = true }

ast = { workspace = true }
half = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
