[package]
name = "reconditioner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
eyre = "0.6"

ast = { path = "../ast" }
parser = { path = "../parser" }

[dependencies.clap]
version = "3.0.0"
features = ["derive"]
