[package]
name = "reconditioner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }

ast = { workspace = true }
concretizer = { workspace = true }
parser = { workspace = true }
half = "2.7.1"
