[package]
name = "reducer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tap = "1.0.1"
which = "4.2.5"

ast = { path = "../ast" }
harness-client = { path = "../harness-client" }
parser = { path = "../parser" }
preprocessor = { path = "../preprocessor" }
reconditioner = { path = "../reconditioner" }

[dependencies.clap]
version = "3.0.0"
features = ["derive"]

[dependencies.naga]
path = "../../harness/external/naga"
features = ["validate", "wgsl-in"]
