[package]
name = "reflection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { workspace = true }
common = { workspace = true }
types = { path = "../reflection-types", package = "reflection-types" }
