[package]
name = "ub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wgslsmith-ub"
path = "src/main.rs"

[dependencies]
bincode = "2.0.0-rc.1"
byteorder = "1.4.3"
eyre = "0.6.8"
serde_json = "1.0"
rand = "0.8.3"

ast = { path = "../ast" }
flow = {path = "../flow"}
parser = { path = "../parser" }
reflection = { path = "../reflection" }
common = { path = "../common" }
types = {path = "../harness-types", package = "harness-types" }
harness = { path = "../harness" }

[dependencies.clap]
version = "3.0.0"
features = ["derive"]
