[package]
name = "validation-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
tempfile = { workspace = true }
threadpool = { workspace = true }

types = { package = "validation-server-types", path = "../validation-server-types" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
