[package]
name = "wgslsmith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
color-eyre = "0.6.1"
crossterm = "0.23.2"
eyre = "0.6.8"
pathdiff = "0.2.1"
rand = "0.8"
regex = "1.5.5"
serde_json = "1.0"
signal-hook = "0.3.14"
tap = "1.0.1"
toml = "0.5.9"
tracing = "0.1"
tui = "0.18.0"
wait-timeout = "0.2.0"

ast = { path = "../ast" }
common = { path = "../common" }
validation-server-types = { path = "../../harness/crates/validation-server-types" }
generator = { path = "../generator" }
parser = { path = "../parser" }
reconditioner = { path = "../reconditioner" }
tint = { path = "../tint" }

[dependencies.clap]
version = "3.0.0"
features = ["derive"]

[dependencies.naga]
path = "../../harness/external/naga"
features = ["validate", "wgsl-in", "hlsl-out", "msl-out"]

[dependencies.nix]
version = "0.24.1"
features = ["signal"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.time]
version = "0.3.9"
features = ["formatting", "local-offset"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
