[package]
name = "wgslsmith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
color-eyre = "0.6.1"
crossbeam-channel = "0.5.5"
crossterm = "0.23.2"
directories = "4.0.1"
edit = "0.1.4"
env_logger = "0.9"
eyre = "0.6.8"
rand = "0.8"
regex = "1.5.5"
serde_json = "1.0"
serde_regex = "1.1.0"
signal-hook = "0.3.14"
tap = "1.0.1"
toml = "0.5.9"
tracing = "0.1"
tui = "0.18.0"

ast = { path = "../ast" }
common = { path = "../common" }
generator = { path = "../generator" }
data_race_generator = { path = "../data_race_generator" }
harness = { path = "../harness", optional = true }
harness-frontend = { path = "../harness-frontend" }
harness-server-types = { path = "../harness-server-types" }
harness-types = { path = "../harness-types" }
parser = { path = "../parser" }
reconditioner = { path = "../reconditioner" }
flow = { path = "../flow" }
ub = { path = "../ub" }
thread = { path = "../thread" }
reflection-types = { path = "../reflection-types" }
tint = { path = "../tint", optional = true }
validation-server-types = { path = "../validation-server-types" }

[dependencies.clap]
version = "3.0.0"
features = ["derive"]

[dependencies.naga]
path = "../../external/naga"
features = ["validate", "wgsl-in", "hlsl-out", "msl-out"]
optional = true

[dependencies.nix]
version = "0.24.1"
features = ["signal"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.time]
version = "0.3.9"
features = ["formatting", "local-offset"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[features]
all = ["harness", "reducer"]
harness = ["dep:harness"]
reducer = ["dep:tint", "dep:naga"]
