[package]
name = "wgslsmith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
directories = { workspace = true }
edit = { workspace = true }
eyre = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_regex = { workspace = true }
signal-hook = { workspace = true }
tap = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tui = { workspace = true }

naga = { workspace = true, optional = true }
tint = { workspace = true, optional = true }

ast = { workspace = true }
common = { workspace = true }
generator = { workspace = true }
harness = { workspace = true, optional = true }
harness-frontend = { workspace = true }
harness-server-types = { workspace = true }
harness-types = { workspace = true }
parser = { workspace = true }
reconditioner = { workspace = true }
reflection-types = { workspace = true }
validation-server-types = { workspace = true }

[features]
all = ["harness", "reducer"]
harness = ["dep:harness"]
reducer = ["dep:tint", "dep:naga"]
