[package]
name = "fxc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.1"
color-eyre = "0.6.1"
threadpool = "1.8.1"

[dependencies.clap]
version = "3.1.17"
features = ["derive"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.37.0"
features = ["Win32_Graphics_Direct3D_Fxc"]
