[package]
name = "harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
env_logger = "0.9"
futures = "0.3"
log = "0.4.16"
serde_json = "1.0"
termcolor = "1.1.3"
wgpu = "0.12"

preprocessor = { path = "../../../crates/preprocessor" }
common = { path = "../../../crates/common" }
dawn = { path = "../dawn" }

[dependencies.clap]
version = "3.1.17"
features = ["derive"]
